--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 body{
     background-color: yellow;
-    color:blueviolet
+    color: white;
+    margin: 0px;
 }
 
 header {
-    border-bottom: solid 200px pink
+    border-bottom: solid 300px rgb(240, 3, 3);
+    padding: 200px;
+    font-size: 32px;
+    color: aquamarine;
+}
+
+section {
+background: greenyellow;
+padding-top: 80px;
+padding-bottom: 80px;
+display: flex;
+justify-content: center;
 }
