--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     background-color: yellow;
-    color: white;
+    color: yellow;
     margin: 0px;
+     font-family: "Noto Sans Sunuwar", sans-serif;
 }
 
 header {
@@ -17,4 +18,8 @@ padding-top: 80px;
 padding-bottom: 80px;
 display: flex;
 justify-content: center;
+}
+
+.chamada-texto{
+    margin-right: 5%;
 }
